libs/braillify/tests/snapshots/coverage_extra__frac_outer_paren.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "$\\frac{(x+1)}{(y-2)}$"
unicode = ok: "⠦⠽⠔⠼⠃⠴⠌⠷⠭⠢⠼⠁⠾"
bytes   = ok: [38, 61, 20, 60, 3, 52, 12, 55, 45, 34, 60, 1, 62]
