libs/braillify/tests/snapshots/coverage_extra__frac_single_a.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "$\\frac{(a)}{b}$"
unicode = ok: "⠃⠌⠷⠁⠾"
bytes   = ok: [3, 12, 55, 1, 62]
