libs/braillify/tests/snapshots/coverage_extra__fullwidth_hash_a.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "＃(A)"
unicode = ok: "⠸⠹⠦⠠⠁⠴"
bytes   = ok: [56, 57, 38, 32, 1, 52]
