libs/braillify/tests/snapshots/coverage_extra__fullwidth_hash_double_space.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "＃  A"
unicode = ok: "⠸⠹⠀⠠⠁"
bytes   = ok: [56, 57, 0, 32, 1]
