libs/braillify/tests/snapshots/coverage_extra__fullwidth_hash_x.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "＃(X)"
unicode = ok: "⠸⠹⠦⠠⠭⠴"
bytes   = ok: [56, 57, 38, 32, 45, 52]
