libs/braillify/tests/snapshots/coverage_extra__function_noarg.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "$f()$"
unicode = ok: "⠋⠦⠴"
bytes   = ok: [11, 38, 52]
