libs/braillify/tests/snapshots/coverage_extra__ge_ab.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "a≥b"
unicode = ok: "⠁⠲⠲⠃"
bytes   = ok: [1, 50, 50, 3]
