libs/braillify/tests/snapshots/coverage_extra__greek_alpha.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "α"
unicode = ok: "⠨⠁"
bytes   = ok: [40, 1]
